Atualizacao do .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,5 @@ pip-log.txt
 Leituras Recomendadas pelos Orientadores/projeto-de-pesquisa-exemplo1.pdf
 Leituras Recomendadas pelos Orientadores/projeto-de-pesquisa-exemplo2.pdf
 *.texlipse
+*.brf
+Dissertacao_Marcelo_Goncalves/dissertacao.brf
